@@ -17,89 +17,76 @@
 package org.springframework.cloud.kubernetes.fabric8.discovery;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import io.fabric8.kubernetes.api.model.Endpoints;
 import io.fabric8.kubernetes.api.model.ObjectMeta;
 import io.fabric8.kubernetes.api.model.Service;
-import io.fabric8.kubernetes.api.model.ServiceList;
 import io.fabric8.kubernetes.client.KubernetesClient;
-import io.fabric8.kubernetes.client.dsl.FilterNested;
-import io.fabric8.kubernetes.client.dsl.FilterWatchListDeletable;
-import io.fabric8.kubernetes.client.dsl.MixedOperation;
-import io.fabric8.kubernetes.client.dsl.ServiceResource;
+import io.fabric8.kubernetes.client.server.mock.EnableKubernetesMockClient;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 
-import org.springframework.cloud.kubernetes.commons.KubernetesNamespaceProvider;
 import org.springframework.cloud.kubernetes.commons.discovery.KubernetesDiscoveryProperties;
-import org.springframework.cloud.kubernetes.commons.discovery.ServicePortSecureResolver;
-import org.springframework.core.env.Environment;
-import org.springframework.mock.env.MockEnvironment;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.when;
 
-class Fabric8DiscoveryClientFilterTest {
+@EnableKubernetesMockClient(crud = true, https = false)
+class Fabric8DiscoveryClientFilterTest extends Fabric8DiscoveryClientBase {
 
-	private static final ServicePortSecureResolver SERVICE_PORT_SECURE_RESOLVER = new ServicePortSecureResolver(
-			KubernetesDiscoveryProperties.DEFAULT);
+	private KubernetesClient mockClient;
 
-	private static final KubernetesNamespaceProvider NAMESPACE_PROVIDER = new KubernetesNamespaceProvider(
-			mockEnvironment());
+	private static final String NAMESPACE = "test";
 
-	private final KubernetesClient kubernetesClient = Mockito.mock(KubernetesClient.class);
-
-	@SuppressWarnings("unchecked")
-	private final MixedOperation<Service, ServiceList, ServiceResource<Service>> serviceOperation = Mockito
-		.mock(MixedOperation.class);
-
-	@SuppressWarnings("unchecked")
-	private final FilterNested<FilterWatchListDeletable<Service, ServiceList, ServiceResource<Service>>> filterNested = Mockito
-		.mock(FilterNested.class);
-
-	@SuppressWarnings("unchecked")
-	private final FilterWatchListDeletable<Service, ServiceList, ServiceResource<Service>> filter = Mockito
-		.mock(FilterWatchListDeletable.class);
+	@AfterEach
+	void afterEach() {
+		mockClient.services().inAnyNamespace().delete();
+		mockClient.endpoints().inAnyNamespace().delete();
+	}
 
 	@Test
 	void testFilteredServices() {
-		List<String> springBootServiceNames = Arrays.asList("serviceA", "serviceB");
+		List<String> springBootServiceNames = List.of("serviceA", "serviceB");
 		List<Service> services = createSpringBootServiceByName(springBootServiceNames);
 
 		// Add non spring boot service
 		Service service = new Service();
 		ObjectMeta objectMeta = new ObjectMeta();
 		objectMeta.setName("ServiceNonSpringBoot");
+		objectMeta.setNamespace(NAMESPACE);
 		service.setMetadata(objectMeta);
 		services.add(service);
+		mockClient.services().inNamespace(NAMESPACE).resource(service).create();
+		Endpoints endpoints = endpoints(NAMESPACE, "ServiceNonSpringBoot", Map.of(), Map.of());
+		mockClient.endpoints().inNamespace(NAMESPACE).resource(endpoints).create();
 
-		ServiceList serviceList = new ServiceList();
-		serviceList.setItems(services);
-		when(kubernetesClient.services()).thenReturn(serviceOperation);
-		when(serviceOperation.inNamespace(Mockito.anyString())).thenReturn(serviceOperation);
-		when(serviceOperation.withNewFilter()).thenReturn(filterNested);
-		when(filterNested.withLabels(Mockito.anyMap())).thenReturn(filterNested);
-		when(filterNested.endFilter()).thenReturn(filter);
-		when(filter.list()).thenReturn(serviceList);
 
 		KubernetesDiscoveryProperties properties = new KubernetesDiscoveryProperties(true, false, Set.of(), true, 60,
 				false, "metadata.additionalProperties['spring-boot']", Set.of(), Map.of(), null,
 				KubernetesDiscoveryProperties.Metadata.DEFAULT, 0, true, false, null);
 
-		Fabric8DiscoveryClient client = new Fabric8DiscoveryClient(kubernetesClient, properties,
-				SERVICE_PORT_SECURE_RESOLVER, NAMESPACE_PROVIDER,
-				new Fabric8DiscoveryClientSpelAutoConfiguration().predicate(properties));
-		List<String> filteredServices = client.getServices();
-		assertThat(filteredServices).isEqualTo(springBootServiceNames);
+		Fabric8DiscoveryClient fabric8DiscoveryClient = fabric8DiscoveryClient(properties, List.of(NAMESPACE), mockClient);
+
+		List<String> filteredServices = fabric8DiscoveryClient.getServices();
+		assertThat(filteredServices).containsExactlyInAnyOrder("serviceA", "serviceB");
+
+		// without filter
+		properties = new KubernetesDiscoveryProperties(true, false, Set.of(), true, 60,
+			false, null, Set.of(), Map.of(), null,
+			KubernetesDiscoveryProperties.Metadata.DEFAULT, 0, true, false, null);
+
+		fabric8DiscoveryClient = fabric8DiscoveryClient(properties, List.of(NAMESPACE), mockClient);
+
+		filteredServices = fabric8DiscoveryClient.getServices();
+		assertThat(filteredServices).containsExactlyInAnyOrder("serviceA", "serviceB", "ServiceNonSpringBoot");
 
 	}
 
 	@Test
 	void testFilteredServicesByPrefix() {
-		List<String> springBootServiceNames = Arrays.asList("serviceA", "serviceB", "serviceC");
+		List<String> springBootServiceNames = List.of("serviceA", "serviceB", "serviceC");
 		List<Service> services = createSpringBootServiceByName(springBootServiceNames);
 
 		// Add non spring boot service
@@ -108,52 +95,37 @@ class Fabric8DiscoveryClientFilterTest {
 		objectMeta.setName("anotherService");
 		service.setMetadata(objectMeta);
 		services.add(service);
-
-		ServiceList serviceList = new ServiceList();
-		serviceList.setItems(services);
-		when(kubernetesClient.services()).thenReturn(serviceOperation);
-		when(serviceOperation.inNamespace(Mockito.anyString())).thenReturn(serviceOperation);
-		when(serviceOperation.withNewFilter()).thenReturn(filterNested);
-		when(filterNested.withLabels(Mockito.anyMap())).thenReturn(filterNested);
-		when(filterNested.endFilter()).thenReturn(filter);
-		when(filter.list()).thenReturn(serviceList);
+		mockClient.services().inNamespace(NAMESPACE).resource(service).create();
+		Endpoints endpoints = endpoints(NAMESPACE, "anotherService", Map.of(), Map.of());
+		mockClient.endpoints().inNamespace(NAMESPACE).resource(endpoints).create();
 
 		KubernetesDiscoveryProperties properties = new KubernetesDiscoveryProperties(true, false, Set.of(), true, 60,
 				false, "metadata.name.startsWith('service')", Set.of(), Map.of(), null,
 				KubernetesDiscoveryProperties.Metadata.DEFAULT, 0, true, false, null);
-		Fabric8DiscoveryClient client = new Fabric8DiscoveryClient(kubernetesClient, properties,
-				SERVICE_PORT_SECURE_RESOLVER, NAMESPACE_PROVIDER,
-				new Fabric8DiscoveryClientSpelAutoConfiguration().predicate(properties));
-
+		Fabric8DiscoveryClient client = fabric8DiscoveryClient(properties, List.of(NAMESPACE), mockClient);
 		List<String> filteredServices = client.getServices();
-		assertThat(filteredServices).isEqualTo(springBootServiceNames);
+		assertThat(filteredServices).containsExactlyInAnyOrder("serviceA", "serviceB", "serviceC");
+
+		properties = new KubernetesDiscoveryProperties(true, false, Set.of(), true, 60,
+			false, "metadata.name.startsWith('another')", Set.of(), Map.of(), null,
+			KubernetesDiscoveryProperties.Metadata.DEFAULT, 0, true, false, null);
+		client = fabric8DiscoveryClient(properties, List.of(NAMESPACE), mockClient);
+		filteredServices = client.getServices();
+		assertThat(filteredServices).containsExactlyInAnyOrder("anotherService");
 
 	}
 
 	@Test
 	void testNoExpression() {
-		List<String> springBootServiceNames = Arrays.asList("serviceA", "serviceB", "serviceC");
-		List<Service> services = createSpringBootServiceByName(springBootServiceNames);
-
-		ServiceList serviceList = new ServiceList();
-		serviceList.setItems(services);
-		when(kubernetesClient.services()).thenReturn(serviceOperation);
-		when(serviceOperation.inNamespace(Mockito.anyString())).thenReturn(serviceOperation);
-		when(serviceOperation.withNewFilter()).thenReturn(filterNested);
-		when(filterNested.withLabels(Mockito.anyMap())).thenReturn(filterNested);
-		when(filterNested.endFilter()).thenReturn(filter);
-		when(filter.list()).thenReturn(serviceList);
+		List<String> springBootServiceNames = List.of("serviceA", "serviceB", "serviceC");
+		createSpringBootServiceByName(springBootServiceNames);
 
 		KubernetesDiscoveryProperties properties = new KubernetesDiscoveryProperties(true, false, Set.of(), true, 60,
 				false, "", Set.of(), Map.of(), null, KubernetesDiscoveryProperties.Metadata.DEFAULT, 0, true, false,
 				null);
-		Fabric8DiscoveryClient client = new Fabric8DiscoveryClient(kubernetesClient, properties,
-				SERVICE_PORT_SECURE_RESOLVER, NAMESPACE_PROVIDER,
-				new Fabric8DiscoveryClientSpelAutoConfiguration().predicate(properties));
-
+		Fabric8DiscoveryClient client = fabric8DiscoveryClient(properties, List.of(NAMESPACE), mockClient);
 		List<String> filteredServices = client.getServices();
-
-		assertThat(filteredServices).isEqualTo(springBootServiceNames);
+		assertThat(filteredServices).containsExactlyInAnyOrder("serviceA", "serviceB", "serviceC");
 
 	}
 
@@ -166,14 +138,13 @@ class Fabric8DiscoveryClientFilterTest {
 			objectMeta.setAdditionalProperty("spring-boot", "true");
 			service.setMetadata(objectMeta);
 			serviceCollection.add(service);
-		}
-		return serviceCollection;
-	}
 
-	private static Environment mockEnvironment() {
-		MockEnvironment environment = new MockEnvironment();
-		environment.setProperty("spring.cloud.kubernetes.client.namespace", "test");
-		return environment;
+			mockClient.services().inNamespace(NAMESPACE).resource(service).create();
+			Endpoints endpoints = endpoints(NAMESPACE, serviceName, Map.of(), Map.of());
+			mockClient.endpoints().inNamespace(NAMESPACE).resource(endpoints).create();
+		}
+
+		return serviceCollection;
 	}
 
 }
